# connectivity-technology

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md
host/apps/camera/: aa
host/apps/home_security/: CMakeLists.txt  aa  base64.h  bb  camera.c  camera.h  camera_internal.h  cc  curl.c  curl.h  driveway.c  event.c  event_internal.h  home_security.c  home_security.h  hs_yaml.h  join.c  join.h  message.c  message.h  misc.c  mqtt.c  mqtt.h  up.c  up.h
host/apps/led_control/: .gdbinit  CMakeLists.txt  aa  base64.c  base64.h  bb  event.h  file_entry.c  file_entry.h  led.c  led.h  led_control.c  misc.h  mqtt.c  mqtt.h  off  on  yaml.c
include/: priority.h
moko/lw008/: CMakeLists.txt  Kconfig  prj.conf
moko/lw008/src/: main.c
scripts/: .gitignore  update_version.pl
src/: CMakeLists.txt  bt_task.c  bt_task.h  ct_main.c  debug_gpio.c  debug_gpio.h  gpio_mapper.c  led.c  lora.c  radio_mutex.c  radio_mutex.h  stubs.c  vars.c  vars.h  wifi.c  wifi.h
src/accel/: CMakeLists.txt  accel.c  accel.h  lr11xx_drv.h
src/alert/: CMakeLists.txt  alert.c  alert.h
src/bluetooth/: CMakeLists.txt  bluetooth.c  vars.c  vars.h
src/buttons/: CMakeLists.txt  buttons.c  buttons.h  buttons_internal.h
src/driveway_sensor/: CMakeLists.txt  driveway_sensor.c  driveway_sensor.h
src/led/: CMakeLists.txt  led.c  led.h  led_internal.h
src/pe4259/: CMakeLists.txt  pe4259.c  pe4259.h
src/pir/: CMakeLists.txt  pir.c  pir.h
src/semtracker/: CMakeLists.txt  config.c  config.h  downlink.c  downlink.h  lr11xx_firmware.c  lr11xx_firmware.h  semtracker.c  semtracker.h  semtracker_internal.h
src/settings/: CMakeLists.txt  settings.c  settings.h
src/temperature_humidity/: CMakeLists.txt  temperature_humidity.c  temperature_humidity.h
zephyr/: module.yml
